<resources>
    <string name="app_name">骨网金来</string>
    <string name="toolbar_title_account">个人中心</string>

    <string name="status_capturesuccess">Capture successful: %s</string>
    <string name="status_capturecancelled">Capture cancelled by user</string>
    <string name="status_capturefailed">Capture failed</string>
    <string name="status_nocapture">nothing captured yet</string>

    <string name="tab_home">首页</string>
    <string name="tab_account">我的</string>
    <string name="tab_null"></string>
    <string name="feed_with_page">全部</string>
    <string name="feed_with_id">日常</string>
    <string name="feed_without">普通</string>

    <string name="app_decription">一个神奇的应用</string>
    <string name="forgot_password">忘记密码？</string>
    <string name="create_account">创建帐号</string>
    <string name="different_login">或</string>

    <string name="account_settings">用户协议</string>
    <string name="account_update">检查更新</string>

    <string name="login_username_hint">手机号</string>
    <string name="login_passowrd_hint">密码</string>
    <string name="login_passowrd_error">密码长度不能低于6位</string>
    <string name="login_username_error">手机号码格式不对</string>
    <string name="login_bottom_register">没有账号?去注册</string>
    <string name="btn_login">登录</string>
    <string name="login_or">或</string>

    <string name="content_description">Content Description</string>
    <string name="placehold_short">Placehold</string>
    <string name="placehold_long">Fugit assumenda est incidunt. Odio doloribus non consequatur itaque. Reiciendis et laborum non enim. </string>

    <string name="download_progress">正在下载:%1$d%%</string>
    <string name="download_success">下载完成</string>
    <string name="__leak_canary_analysis_failed">失败</string>
    <string name="title_activity_signup">Sign up</string>

    <!-- Strings related to login -->
    <string name="prompt_email">手机号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">注册</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">手机号格式不正确</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">这是必填项</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="activity_detail_label_tagline">Tagline</string>
    <string name="activity_detail_label_description">Description</string>
    <string name="activity_detail_reviews_description">Reviews</string>
    <string name="activity_detail_confirmation">Saved !!</string>
     <string name="star_data">
            M 200.30535,69.729172
            C 205.21044,69.729172 236.50709,141.52218 240.4754,144.40532
            C 244.4437,147.28846 322.39411,154.86809 323.90987,159.53312
            C 325.42562,164.19814 266.81761,216.14828 265.30186,220.81331
            C 263.7861,225.47833 280.66544,301.9558 276.69714,304.83894
            C 272.72883,307.72209 205.21044,268.03603 200.30534,268.03603
            C 195.40025,268.03603 127.88185,307.72208 123.91355,304.83894
            C 119.94524,301.9558 136.82459,225.47832 135.30883,220.8133
            C 133.79307,216.14828 75.185066,164.19813 76.700824,159.53311
            C 78.216581,154.86809 156.16699,147.28846 160.13529,144.40532
            C 164.1036,141.52218 195.40025,69.729172 200.30535,69.729172 z
    </string>

    <string name="star_lollipop">
            M 223.42,133.484
            C 237.895,98.1973 280.378,100.58 295.49,133.484
            C 302.176,148.044 293.576,165.914 270.253,183.357
            C 264.16,187.914 268.606,245.136 268.606,248.852
            C 268.606,256.589 268.606,295.171 268.606,302.907
            C 268.606,322.848 268.606,329.725 268.606,339.649
            C 268.606,347.385 255.048,349.681 255.048,339.649
            C 255.048,331.913 255.361,310.637 255.048,302.907
            C 254.579,291.371 255.048,256.788 255.048,249.052
            C 255.048,238.561 254.706,187.75 248.302,183.489
            C 221.536,165.677 218.848,144.628 223.42,133.484 z
    </string>
    <string-array name="user_photos">
        <item>http://www.gbblw.com/uploads/151011/4-151011100535515.jpg</item>
        <item>http://www.gbblw.com/uploads/151011/4-151011100535515.jpg</item>
        <item>http://www.gbblw.com/uploads/151011/4-151011100535515.jpg</item>
        <item>http://www.gbblw.com/uploads/151011/4-151011100535515.jpg</item>
        <item>http://www.gbblw.com/uploads/151011/4-151011100535515.jpg</item>
        <item>http://www.gbblw.com/uploads/151011/4-151011100535515.jpg</item>
        <item>http://www.gbblw.com/uploads/151011/4-151011100535515.jpg</item>
        <item>http://www.gbblw.com/uploads/151011/4-151011100535515.jpg</item>
        <item>http://www.gbblw.com/uploads/151011/4-151011100535515.jpg</item>
        <item>http://www.gbblw.com/uploads/151011/4-151011100535515.jpg</item>
        <item>http://www.gbblw.com/uploads/151011/4-151011100535515.jpg</item>
        <item>http://www.gbblw.com/uploads/151011/4-151011100535515.jpg</item>
        <item>http://www.gbblw.com/uploads/151011/4-151011100535515.jpg</item>
        <item>http://www.gbblw.com/uploads/151011/4-151011100535515.jpg</item>
        <item>http://www.gbblw.com/uploads/151011/4-151011100535515.jpg</item>
        <item>http://www.gbblw.com/uploads/151011/4-151011100535515.jpg</item>
        <item>http://www.gbblw.com/uploads/151011/4-151011100535515.jpg</item>
        <item>http://www.gbblw.com/uploads/151011/4-151011100535515.jpg</item>
        <item>http://www.gbblw.com/uploads/151011/4-151011100535515.jpg</item>
        <item>http://www.gbblw.com/uploads/151011/4-151011100535515.jpg</item>
    </string-array>
    <string name="user_profile_photo">http://igcdn-photos-f-a.akamaihd.net/hphotos-ak-xpa1/t51.2885-19/929118_455075441302693_1605108410_a.jpg</string>



</resources>
