<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <!-- Login progress -->
    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/txt_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/app_name"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="45dp"
                    android:clickable="true"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/background_splash" />


            </RelativeLayout>

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:weightSum="1">

                <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/container_login_username"
                    >
                    <AutoCompleteTextView
                        android:id="@+id/edit_login_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:singleLine="true"
                        android:textColorHint="@color/grey_0" />
                    <!--android:textColorHint="@color/abc_primary_text_material_dark" />-->
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/container_login_password"
                    >
                    <EditText
                        android:id="@+id/edit_login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:singleLine="true"
                        android:textColorHint="@color/grey_0" />
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt_forgot"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/noaccount_background"
                        android:gravity="center"
                        android:textColor="@color/grey_1000"
                        android:paddingBottom="15dp"
                        android:clickable="true"
                        android:layout_marginTop="2dp"
                        android:paddingLeft="2dp"
                        android:paddingTop="15dp"
                        android:text="@string/forgot_password"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <TextView
                        android:id="@+id/container_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/grey_1000"
                        android:layout_marginTop="2dp"
                        android:background="@drawable/noaccount_background"
                        android:gravity="center"
                        android:paddingBottom="15dp"
                        android:paddingRight="2dp"
                        android:paddingTop="15dp"
                        android:text="@string/create_account"
                        android:clickable="true"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </LinearLayout>

                <Button
                    android:id="@+id/btn_login"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey_0"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/login_btn"
                    android:text="@string/btn_login" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/different_login"
                    android:textColor="@color/grey_1000"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Button style="@style/AppTheme.Button"
                    android:id="@+id/image_login_qq"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:layout_marginTop="6dp"
                    android:text="QQ登录"
                    android:background="@drawable/login_btn"
                    android:padding="5dp"

                    />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
